syntax="proto3";
package studentgrpc;

//Servicios
service Student {
    rpc GetStudent(StudentRequest) returns (StudentResponse);
}

//Mensajes
message StudentRequest {
    string name = 1;
    int32 age = 2;
    string faculty = 3;
    Discipline discipline = 4;
}

message StudentResponse {
    bool Success = 1;
}

enum Discipline {
    swimming = 0;
    boxing = 1;
    atletist = 2;
}